# IBSimu

./: AUTHORS  COMPATIBILITY  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.ac  ibsimu-1.0.6dev.pc.in
demo/Vlasov2d/: CMakeCache.txt  CMakeLists.txt  main.cpp
doc/: Doxyfile.in  Doxyfile_web.in  Makefile.am  Makefile.in
m4/: check_umfpack.m4  check_zlib.m4
src/: Makefile.am  Makefile.in  config.h  config.h.in  dxf_solid.cpp  epot_matrixsolver.cpp  epot_matrixsolver.hpp  epot_solver.cpp  epot_solver.hpp  error.cpp  error.hpp  fonts.cpp  fonts.hpp  geomplot.cpp  geomplot.hpp  gtkfielddiagwindow.cpp  gtkframewindow.cpp  gtkgeomwindow.cpp  gtkparticlediagwindow.cpp  id.hpp  particledatabase.hpp  particledatabaseimp.cpp  particledatabaseimp.hpp  particlediagplot.cpp  particleiterator.hpp  particles.hpp  particlestepper.hpp  plotter.cpp  plotter.hpp  scharge.cpp  scharge.hpp  stlfile.cpp  trajectory.cpp  trajectorydiagnostics.hpp  vec3d.hpp
tests/: Makefile.am  Makefile.in  ibsimutest.cpp  ibsimutest.hpp  nsimp_plasma2d.cpp  nsimp_plasma3d.cpp  nsimp_plasmacyl.cpp  particles_bfield2d.cpp  particles_bfieldcyl.cpp  particles_cyl.cpp  particles_cyl2.cpp  particles_diagnostic.cpp  particles_edip.cpp  particles_mirror.cpp  particles_relativistic.cpp  particles_trajectory.cpp  plasma2d.cpp  plasma3d.cpp  plasmacyl.cpp  solver1d_scharge.cpp  solver2d_coax.cpp  solver2d_coax.gpl  solver3d_sphere.cpp  solvercyl_coax.cpp
